2006-12-13 Sandro Santilli <strk@refractions.net>

	* precision::GeometrySnapper, precision::LineStringSnapper:
	  Updated port information.

2006-12-11 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/noding/SegmentIntersector.h: added virtual
	  isDone() function, always returning false by default.
	* source/noding/MCIndexNoder.cpp (intersectChains):
	  short-circuit from JTS-1.8, based on the new
	  SegmentIntersector::isDone() method.
	* source/noding/Makefile.am, source/noding/FastNodingValidator.cpp,
	  source/noding/SingleInteriorIntersectionFinder.cpp,
	  source/headers/geos/noding/Makefile.am,
	  source/headers/geos/noding/FastNodingValidator.h,
	  source/headers/geos/noding/SingleInteriorIntersectionFinder.h:
	  New ports from JTS-1.8-cvs.
	* source/headers/geos/geomgraph/EdgeNodingValidator.h:
	  use a FastNodingValidator rather then a simple NodingValidator.

2006-12-07 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/algorithm/: CentralEndpointIntersector.h,
	  Makefile.am: new port from JTS-1.8.
	* algorithm::LineIntersector: robustness improvements
	  from JTS-1.8.

2006-12-05 Mateusz Loskot <mateusz@loskot.net>

	* build\msvc80\geos_unit\geos_unit.vcproj: added C API unit tests
	* tests\unit\capi\GEOSCoordSeqTest.cpp,tests\unit\capi\GEOSSimplifyTest.cpp:
	  small cleaning, using C calls from C++ std namespace.

2006-12-05 Sandro Santilli <strk@refractions.net>

	* source/operation/overlay/OverlayOp.cpp: Use EdgeNodingValidator
	  instead of OverlayResultValidator (faster and more effective).
	  Note that compile-time defines can select use of either or both
	  ones.
	* source/headers/geos/geom/BinaryOp.h: be quiet if not in DEBUG mode.
	* noding::NodingValidator.h: throw TopologyException
	  rather then a generic GEOSException.

2006-12-04 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geomgraph/EdgeNodingValidator.h:
	  fix members initialization order.
	* geomgraph::EdgeNodingValidator: minor cleanup